--- a/Proyecto Novia/style.css
+++ b/Proyecto Novia/style.css
@@ -21,7 +21,7 @@ header{
     background-color: #0a83c0;
     color: white;
     text-transform: uppercase;
-    padding: 10px;
+    padding: 10px 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -122,9 +122,7 @@ footer{
     }
 
     header{
-        padding: 10px;
-        padding-right:0 ;
-        padding-left: 0;
+        padding: 10px 0;
     }
 
     .titulo{
