--- a/Proyecto Novia/style.css
+++ b/Proyecto Novia/style.css
@@ -101,6 +101,29 @@ main{
     width: 100%;
 }
 
+article{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    background-color: #0a83c0;
+    border-radius: 1em;
+    box-shadow: 4px 4px 4px grey,-4px 4px 4px grey;
+    color: white;
+    margin-top: 3em;
+    padding: 10px;
+}
+
+.articulo{
+    text-align: justify;
+    font-size: 1.5em;
+}
+
+h2{
+    font-size: 1.8em;
+    font-weight: bold;
+}
+
 footer{
     width: 100%;
     position: absolute;
